--- a/style/style.css
+++ b/style/style.css
@@ -1,26 +1,46 @@
 
 .header-container {
-    max-width: 1440px;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
+    position: sticky;
+    z-index: 50;
+    top: 0;
+    left: 0;
+    background-color: #fff;
 }
-
 .header-top {
-    display: flex; 
-    justify-content: flex-end;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin: 10px 0;
+    width: 100%;
+    background-color: #BFB4AA;
   }
 
 .header-top-i { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 100px;
-    height: 30px;
+    height: 50px;
     margin-right: 15px;
 }
 
 .forms-box {
-    max-width: 500px;
-    height: 30px;
+   max-width: 450px;
+}
+
+.forms-box h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #4A4849;
+    font-size: 23px;
+    text-shadow: 5px 2px #E2DBCB;
+    font-weight: bold;
+    font-family: 'Castoro Titling', cursive;
+    text-align: center;
+    max-width: 350px;
+    height: 50px;
 }
 
 input[type=submit] {
@@ -29,49 +49,40 @@ input[type=submit] {
     color: #CEC7B5;
     font-size: 18px;
     border-radius: 10px 0;
-      }
+}
 
+.burger {
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    display: none;
+   
+}
 .header-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1440px;
-    width: 90%;
-    margin: 0 auto;
-    padding: 20px 0 20px 0;
-    
-}
-.header-nav h2 {
-    color: #4A4849;
-    font-size: 30px;
-    text-shadow: 2px 1px #E2DBCB;
-    font-weight: bold;
-    font-family: 'Castoro Titling', cursive;
-    width: 420px;
-}
+    position: relative;
+    padding: 30px;
+} 
+
 .header-nav img {
-    width: 50px;
+    max-width: 50px;
+    width: 100%;
     height: 50px;
-}
-/* navigation */
-.nav-item {
-    width: 500px;
   
 }
 .nav-bar a {
     color: #4A4849;
     display: block;
     height: 50px;
-    max-width: 450px;
+    max-width: 650px;
     font-size: 16px;
     text-transform: uppercase;
     font-weight: bold;
     font-family: 'Castoro Titling', cursive;
-    
 }
+
 .nav-bar > ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     max-width: 450px;
     margin: 0 auto;
@@ -81,126 +92,53 @@ input[type=submit] {
 .nav-bar > ul > li > a {
     padding: 10px;
     background-color: #CEC7B5;
-  
+    height: 60px;
 }
+
 .nav-bar > ul > li > a:hover {
     background: #CEC7B5;
     color: #F3F1E4;
-    
 }
+
 .nav-bar .active {
-    background:#4A4849;
+    background: #A60F37;
     color: #F2E6CE;
-    
 }
+
 .nav-bar > ul > li {
     float: right;
     width: 90%;
     text-align: center;
-   
-   
-}
-
-/* navigation */
-.topnav {
-    overflow: hidden;
-    background-color:#E2DBCB;
-    position: relative;
- 
-  }
-  
-  .topnav #myLinks {
-    display: none;
-  }
-  
-  .topnav a {
-    color:#4A4849;
-    padding: 14px 16px;
-    font-size: 24px;
-    display: block;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-family: 'Castoro Titling', cursive;
-  }
-  
-  .topnav a.icon {
-    background: #6A7371;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  
-  .topnav a:hover {
-    background-color:#6A7371;
-    color:  #4A4849;
-  }
-  
-  .active {
-    background-color:#A60F37;
-    color: white;
-  }
-  .topnav {
-    display: none;
 }
 
 
+/* video section */
 
-
-
-
-/* chat icon */
-.chat-icon {
-    position: fixed;
-    right: 30px;
-    bottom: 30px;
-    width: 60px;
-    height: 60px;
-    border-radius: 30px;
-    background-color: #A60F37;
-    z-index: 5;
-}
-.chat-icon i {
-    position: absolute;
-    z-index: 10;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-
-
-
-.story-container {
-    position: relative;
-    max-width: 1296px;
+.video-box {
     width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 5;
-
+ 
 }
 
 .video-box video {
-   max-width: 1440px;
-     width: 100%;
+   width: 100%;
+   height: auto;
+    margin: 0 auto;
+    position:relative;
+    z-index: 1;
+    top: 0;
+    left: 0;
 }
-.video-textbox {
+/* .video-textbox {
     background-image: url(/background-image/blurred.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    width: 450px;
     position: absolute;
-    z-index: 20;
-    top: 25px;
-    left: 25px;
-    right: 25px;
-    bottom: 25px;
-    max-width: 550px;
-    height: calc(100vh - 330px);
+    z-index: 10;
+    top: 100px;
+    left: 20px;
     
 }
 .video-textbox h3 {
@@ -226,26 +164,77 @@ input[type=submit] {
     align-items: center;
     background-color: #4A4849;
     border: none;
-    padding: 15px 15px;
-    margin: 0 21px;
-    text-align: center;
+    padding: 15px;
+    margin: 10px 21px;
     font-family: 'Castoro Titling', cursive;
     font-size: 20px;
     cursor: pointer;
+    width: 200px;
+   
+} */
+
+.about-container {
+    max-width: 1440px;
+    width: 90%;
+    margin: 0 auto;
+    background: #F2E6CE;
+   
+}
+.flex-about {
+    display: flex;
+    column-gap: 50px;
+     align-items: center;
 }
 
+.left-wrapper {
+    width: 100%;
+  }
+.left-wrapper img{
+    width: 600px;
+    object-fit:fill;
+ }
+ .right-wrapper {
+    width: 600px;
+ }
+.right-wrapper p {
+    text-align: justify;
+    line-height: 31px;
+    font-size: calc(2vw);
+    color: #6A7371;
+    padding: 10px;
+    }
 
+ 
 
+.history {
+    max-width: 1440px;
+    width: 90%;
+    margin: 0 auto;
+    border: #A60F37 2px solid ;
+}
+.left-history {
+    max-width: 1440px;
+}
+.left-history video {
+    width: 100%;
+}
+.right-history {
+background-color: #A60F37;
+}
 
+   .right-history  p {
+    color: #CEC7B5;
+    font-weight: bold;
+    font-size: calc(3vw);
+   }
 
 .gallery {
-  
-    max-width: 1440px;
-    margin: 0 auto;
-    width: 90%;
+    background-image: linear-gradient(#ffffff,#D9CDBF, #ffffff);
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 10px;
+    margin-bottom: 100px;
 }
 
 
@@ -256,8 +245,8 @@ input[type=submit] {
     margin-bottom: 20px;
     transition-duration: 1s;
     max-width: 420px;;
-    height: 450px;
-    /* border: #6A7371 outset 1px; */
+    height: auto;
+  
  }
 
  .image-container:hover {
@@ -276,5 +265,77 @@ input[type=submit] {
 
  .image-container {
     padding: 0 15px 15px 15px;
+    text-align: center;
+ }
+
+
+
+
+ /* chat icon */
+.chat-icon {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    background-color: #A60F37;
+    z-index: 5;
+}
+.chat-icon i {
+    position: absolute;
+    z-index: 10;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* footer */
+.footer-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo-f {
+    max-width: 130px;
+    height: 130px;
+   
+}
+
+  .flex-footer {
+    display: flex;
+   flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-ul>ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 1024px;
+    width: 100%;
+    height: auto;
+    gap: 30px;
+   
+  }
+  .footer-ul a {
+    color: #4A4849;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    
+  }
+
+  .copyright {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 550px;
+  }
+ .copyright p {
+    padding: 40px 0;
+    color: #4A4849;
+    font-size: 14px;
+    width: 100%;
     text-align: center;
  }
