--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-
+/* header */
 .header-container {
     width: 100%;
     margin: 0 auto;
@@ -50,26 +50,77 @@ input[type=submit] {
     font-size: 18px;
     border-radius: 10px 0;
 }
+/* header */
+/* navigation */
 
-.burger {
-    position: absolute;
-    top: 60px;
-    right: 10px;
-    display: none;
-   
-}
 .header-nav {
     position: relative;
-    padding: 30px;
+    top: 0;
+    left: 0;
 } 
 
+.mobile-container {
+    max-width: 766px;
+    margin: 0 auto;
+    background-color: #fff;
+    height: auto;
+    color: white;
+    border-radius: 10px;
+    display: none;
+  }
+
+.topnav {
+    overflow: hidden;
+    background-color:#6A7371;
+    position: relative;
+  }
+  
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: #ffffff;
+  }
+  
+  .active {
+    background-color: #A60F37;
+    color: white;
+  }
+   
 .header-nav img {
-    max-width: 50px;
+    max-width: 60px;
     width: 100%;
-    height: 50px;
+    height: 60px;
   
 }
-.nav-bar a {
+.navigation{
+    position: absolute;
+    top: 0;
+    right: 0;
+    max-width: 500px;
+    padding-bottom: 20px;
+    margin: 0 auto;
+  
+}
+.navigation a {
     color: #4A4849;
     display: block;
     height: 50px;
@@ -80,43 +131,40 @@ input[type=submit] {
     font-family: 'Castoro Titling', cursive;
 }
 
-.nav-bar > ul {
+.navigation > ul {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    max-width: 450px;
+     max-width: 450px;
     margin: 0 auto;
    
 }
 
-.nav-bar > ul > li > a {
+.navigation> ul > li > a {
     padding: 10px;
     background-color: #CEC7B5;
     height: 60px;
 }
 
-.nav-bar > ul > li > a:hover {
+.navigation> ul > li > a:hover {
     background: #CEC7B5;
     color: #F3F1E4;
 }
 
-.nav-bar .active {
+.navigation .active {
     background: #A60F37;
     color: #F2E6CE;
 }
 
-.nav-bar > ul > li {
+.navigation > ul > li {
     float: right;
     width: 90%;
     text-align: center;
 }
-
+/* navigarion */
 
 /* video section */
-
+/* index.html */
 .video-box {
     width: 100%;
- 
 }
 
 .video-box video {
@@ -128,7 +176,7 @@ input[type=submit] {
     top: 0;
     left: 0;
 }
-/* .video-textbox {
+.video-textbox {
     background-image: url(/background-image/blurred.jpg);
     background-size: cover;
     background-position: center;
@@ -171,8 +219,9 @@ input[type=submit] {
     cursor: pointer;
     width: 200px;
    
-} */
-
+}
+/* index */
+/* about.html */
 .about-container {
     max-width: 1440px;
     width: 90%;
