--- a/style/style.css
+++ b/style/style.css
@@ -467,3 +467,17 @@ input[type=submit] {
     width: 100%;
     text-align: center;
  }
+/* scroll */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+   ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
