--- a/style/responsive.css
+++ b/style/responsive.css
@@ -3,20 +3,35 @@
     .footer-ul  {
         flex-direction: column;
         align-items: center;
-       
+    
     }
    .flex-about {
     flex-direction: column-reverse;
     
    }
-   .left-wrapper img {
-       width: 100%;
-   }
- 
    .right-wrapper{
      width: 100%;
    }
-  
+   .left-wrapper img {
+    width: 100%;
+    height: 500px;
+}
+.right-wrapper p {
+    width: 100%;
+    margin: 0 auto;
+}
+.right-wrapper h4{
+    width: 100%;
+    text-align: center;
+}
+.form {
+    display: none;
+}
+.form1 input[type=submit]  {
+    display: flex;
+    margin-right: 5px;
+    width: 80px;
+}
 }
 
 
@@ -49,7 +64,7 @@
     font-size: 16px;
     line-height: 20px;
    }
-   .left-wrapper {
+.left-wrapper {
     width: 100%;
 }
 .left-wrapper{
