--- a/style/style.css
+++ b/style/style.css
@@ -12,34 +12,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    margin: 0 auto;
+    width: 90%;
   }
 .header-top-i { 
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 100px;
-    height: 50px;
-    margin-right: 15px;
+     height: 50px;
 }
-.forms-box {
-   max-width: 450px;
-}
+
 .forms-box h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #4A4849;
-    font-size: 23px;
-    text-shadow: 1px 1px #E2DBCB;
-    font-weight: bold;
     font-family: 'Castoro Titling', cursive;
+    font-size: 36px;
+    font-weight: bolder;
+    text-shadow:#6A7371 2px 1px;
     text-align: center;
-    max-width: 350px;
+    max-width: 450px;
     height: 50px;
+    padding-top: 10px;
+}
+.form{
+ max-width: 450px;
 }
 input[type=submit] {
-    width: 100px;
     color: #CEC7B5;
     font-size: 18px;
     background-image: linear-gradient(#618C03, #262626);
@@ -53,6 +49,7 @@ input[type=submit] {
     left: 0;
 } 
 .header-nav img {
+    
     border: #383838 1px solid;
      border-radius: 30px;
 }
@@ -118,7 +115,7 @@ input[type=submit] {
     color: #888;
     display: block;
     height: 50px;
-    max-width: 650px;
+    width: 125px;
     font-size: 18px;
     text-transform: uppercase;
     font-weight: bolder;
@@ -178,31 +175,45 @@ input[type=submit] {
     font-size: 38px;
     text-align:start;
    padding: 15px;
-    color:#A60F37;
+    color:#618C03;
 }
 .video-textbox p {
-    font-size: 24px;
+    font-size: 26px;
     text-align: justify;
     padding: 15px;
-    color:#404040;
+    color:#262626;
+}
+.video-textbox span {
+    color: #262626;
+    font-weight: bolder;
+    text-transform: uppercase;
 }
 
-.black-box-video a {
-    color: #CEC7B5;
-    
-}
 .black-box-video {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #4A4849;
     border: none;
-    padding: 15px;
     margin: 10px 21px;
-    font-family: 'Castoro Titling', cursive;
-    font-size: 20px;
-    cursor: pointer;
     width: 150px;
+    height: 50px;
+}
+.video-box-shop {
+    font-family: 'Castoro Titling', cursive;
+    font-size: 18px;
+    cursor: pointer;
+    color: #262626;
+    font-weight: bolder;
+    text-transform: uppercase;
+    animation-name: shopnew;
+    animation-duration: 10s;
+}
+@keyframes shopnew {
+    0% {  background-color: #4A4849;}
+    25% {  background-color:#6A7371;}
+    50% { background-color:#888;}
+    100% {background-color: #E2DBCB;}
 }
 .about-container {
     max-width: 1440px;
@@ -226,7 +237,10 @@ input[type=submit] {
  .right-wrapper {
     width: 100%;
  }
- .right-wrapper h4 {
+ .right-wrapper-1 {
+    display: flex;
+ }
+ .right-wrapper-1 h4 {
     font-size: 38px;
     color: #262626;
     font-weight: bolder;
@@ -241,10 +255,11 @@ input[type=submit] {
     max-width: 600px;
     }
 
-.right-wrapper img {
-    width: 40px;
-    height: 40px;
-    }
+.right-wrapper-1 img {
+    width: 30px;
+    height: 30px;
+    opacity: 0.4;
+}
 
 .history {
     max-width: 1440px;
@@ -265,13 +280,20 @@ input[type=submit] {
 }
    .right-history  p {
     color: #CEC7B5;
-    font-size: calc(2vw);
+    font-size: 30px;
     text-align: center;
-    padding: 30px 40px;
+    padding: 10px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
    }
-
+.title-p{
+    text-align:left;
+    padding-left: 20px;
+    font-family: 'Castoro Titling', cursive;
+    font-size: 40px;
+    font-weight: bolder;
+    text-shadow:#383838 2px 1px;
+}
 .gallery {
     background-image: linear-gradient(#ffffff,#D9CDBF, #ffffff);
     width: 100%;
@@ -301,16 +323,49 @@ input[type=submit] {
     height: auto;
  }
 .image-container p, span, a {
-    padding: 0 15px 15px 15px;
     text-align: center;
  }
 
  .image-container {
-    padding: 0 15px 15px 15px;
-    text-align: center;
+       text-align: center;
  }
-
+ .child {
+    background-color: #fff;
+ }
+.child p {
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    text-align: center;
+    width: 100%;
+    padding: 5px;
+}
+.child span {
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    text-align: center;
+    width: 100%;
+    color: red;
+}
+.child a {
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    text-align: center;
+    width: 100%;
+    color:#4A4849;
+    text-decoration:underline;
+}
 /* sale item */
+.title-p{
+    text-align:left;
+    padding-left: 20px;
+    font-family: 'Castoro Titling', cursive;
+    font-size: 40px;
+    font-weight: bolder;
+    text-shadow:#383838 2px 1px;
+}
  .gallery2 {
     width: 100%;
     display: grid;
@@ -337,8 +392,8 @@ input[type=submit] {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     text-align: center;
-     width: 200px;
-     padding: 5px;
+    width: 200px;
+    padding: 5px;
  }
  .child2 p {
     font-size: 14px;
@@ -347,7 +402,7 @@ input[type=submit] {
     text-align: justify;
  }
  .child2 span  {
-    font-size: 18px;
+    font-size: 20px;
     font-family: 'Gruppo', sans-serif;
     font-weight: 400;
     text-align: center;
@@ -363,7 +418,7 @@ input[type=submit] {
 
 .gift-card {
     display: flex;
-    align-content: center;
+    flex-direction: row;
     padding-top: 20px;
 }
 
@@ -371,8 +426,9 @@ input[type=submit] {
     border: #6A7371 4px groove;
     text-align: center;
     font-weight: bolder;
-    padding: 5px;
-    margin: 10px;
+    font-size: 15px;
+    padding:0 5px;
+    margin: 5px;
 }
 
 
@@ -402,9 +458,9 @@ input[type=submit] {
     align-items: center;
 }
 .logo-f {
-    max-width: 130px;
-    height: 130px;
-   
+    max-width: 110px;
+    height: 110px;
+    padding: 10px;
 }
 
   .flex-footer {
