--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
 .header-container {
     width: 100%;
     margin: 0 auto;
+    position: -webkit-sticky;
     position: sticky;
     z-index: 50;
     top: 0;
@@ -206,8 +207,16 @@ input[type=submit] {
     color: #262626;
     font-weight: bolder;
     text-transform: uppercase;
-    animation-name: shopnew;
-    animation-duration: 10s;
+    -webkit-animation-name: shopnew;
+            animation-name: shopnew;
+    -webkit-animation-duration: 10s;
+            animation-duration: 10s;
+}
+@-webkit-keyframes shopnew {
+    0% {  background-color: #4A4849;}
+    25% {  background-color:#6A7371;}
+    50% { background-color:#888;}
+    100% {background-color: #E2DBCB;}
 }
 @keyframes shopnew {
     0% {  background-color: #4A4849;}
@@ -224,7 +233,8 @@ input[type=submit] {
 }
 .flex-about {
     display: flex;
-    column-gap: 20px;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
     align-items: center;
 }
 .left-wrapper {
@@ -232,7 +242,8 @@ input[type=submit] {
   }
 .left-wrapper img{
     width: 600px;
-    object-fit: fill;
+    -o-object-fit: fill;
+       object-fit: fill;
  }
  .right-wrapper {
     width: 100%;
@@ -469,7 +480,7 @@ input[type=submit] {
     background-repeat: no-repeat;
     background-attachment: fixed;
     display: flex;
-   flex-direction: column;
+    flex-direction: column;
     align-items: center;
   }
 
