--- a/style/responsive.css
+++ b/style/responsive.css
@@ -100,6 +100,10 @@
     max-width: 105px;
     height: 105px;
 }
+.title-p{
+    text-align:center;
+    padding-left: 0;
+}
 }
 
 @media (max-width: 481px) {
