--- a/style/style.css
+++ b/style/style.css
@@ -80,6 +80,10 @@ input[type=submit] {
     text-decoration: none;
     font-size: 17px;
     display: block;
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-family: 'Castoro Titling', cursive;
   }
   .topnav a.icon {
     background:#618C03;
