--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,5 @@
 /* header */
 .header-container {
-    
     width: 100%;
     margin: 0 auto;
     position: fixed;
@@ -11,7 +10,7 @@
 }
 .header-top {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     margin: 0 auto;
     width: 90%;
@@ -31,7 +30,8 @@
     font-weight: bolder;
     text-shadow:#6A7371 2px 1px;
     text-align: center;
-    max-width: 0px;
+    padding-top: 10px;
+    padding-bottom: 5px;
     height: 50px;
     max-width: 430px;
 }
@@ -48,11 +48,15 @@ input[type=submit] {
     position: relative;
     top: 0;
     left: 0;
+    width: 95%;
 } 
-.header-nav img {
-     border: #383838 1px solid;
-     border-radius: 30px;
+.header-a img{
+     width: 50x;
+     height: 50px;
+     padding-top: 5px;
+     padding-left: 30px;
 }
+
 .mobile-container {
     max-width: 766px;
     margin: 0 auto;
@@ -100,24 +104,19 @@ input[type=submit] {
     background-color:#383838;
     color:#618C03;
   }
-  .header-nav img {
-    max-width: 60px;
-    width: 100%;
-    height: 60px;
-}
 .navigation{
     position: absolute;
     top: 0;
     right: 0;
-    max-width: 500px;
-    padding-bottom: 20px;
+    max-width: 400px;
     margin: 0 auto;  
 }
 .navigation a {
     color:#618C03;
     display: block;
+    padding-top: 15px;
     height: 50px;
-    width: 120px;
+    width: 100px;
     font-size: 18px;
     text-transform: uppercase;
     font-weight: bolder;
@@ -125,13 +124,11 @@ input[type=submit] {
 }
 .navigation > ul {
     display: flex;
-    max-width: 500px;
-    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
 }
 .navigation> ul > li > a {
-    padding: 10px 5px;
     background-color: #fff;
-    height: 60px;
 }
 .navigation> ul > li > a:hover {
     background: #CEC7B5;
@@ -144,7 +141,7 @@ input[type=submit] {
 
 .navigation > ul > li {
     float: right;
-    width: 90%;
+    width: 100%;
     text-align: center;
 }
 
