--- a/style/style.css
+++ b/style/style.css
@@ -157,11 +157,7 @@ input[type=submit] {
     left: 0;
 }
 .video-textbox {
-    display: block;
-    background-image: url(/background-image/blurred.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-color: #CEC7B5;
     max-width: 550px;
     position: absolute;
     z-index: 10;
