--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* header */
 .header-container {
     width: 100%;
@@ -9,22 +16,38 @@
     background-color: #fff;
 }
 .header-top {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: center;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 100%;
   }
 .header-top-i { 
+    display: -webkit-box; 
+    display: -ms-flexbox; 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 50px;
 }
 
 .forms-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-family: 'Castoro Titling', cursive;
     font-size: 24px;
     font-weight: bolder;
@@ -39,6 +62,8 @@
 input[type=submit] {
     color: #CEC7B5;
     font-size: 18px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#618C03), to(#262626));
+    background-image: -o-linear-gradient(#618C03, #262626);
     background-image: linear-gradient(#618C03, #262626);
 }
 .form1 input[type=submit] {
@@ -123,9 +148,15 @@ input[type=submit] {
     font-family: 'Castoro Titling', cursive;
 }
 .navigation > ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .navigation> ul > li > a:hover {
@@ -181,9 +212,15 @@ input[type=submit] {
 }
 
 .black-box-video {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #4A4849;
     border: none;
     margin: 10px 21px;
@@ -222,10 +259,15 @@ input[type=submit] {
     border: #6A7371 3px hidden ;
 }
 .flex-about {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     -moz-column-gap: 20px;
-         column-gap: 20px;
-    align-items: center;
+         -webkit-column-gap: 20px;
+            column-gap: 20px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .left-wrapper {
     width: 100%;
@@ -239,6 +281,8 @@ input[type=submit] {
     width: 100%;
  }
  .right-wrapper-1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
  }
  .right-wrapper-1 h4 {
@@ -297,8 +341,11 @@ input[type=submit] {
     text-shadow:#6A7371 2px 1px;
 }
 .gallery {
+    background-image: -webkit-gradient(linear,left top, left bottom,from(#ffffff),color-stop(#D9CDBF), to(#ffffff));
+    background-image: -o-linear-gradient(#ffffff,#D9CDBF, #ffffff);
     background-image: linear-gradient(#ffffff,#D9CDBF, #ffffff);
     width: 100%;
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 2px;
@@ -308,16 +355,20 @@ input[type=submit] {
 .image-container {
     margin: 0 auto; 
     width: 90%;
-    box-shadow: 0 15px 30px rgba(0,0,0,0.30), 0 11px 8px rgba(0,0,0,0.22); 
+    -webkit-box-shadow: 0 15px 30px rgba(0,0,0,0.30), 0 11px 8px rgba(0,0,0,0.22);
+            box-shadow: 0 15px 30px rgba(0,0,0,0.30), 0 11px 8px rgba(0,0,0,0.22); 
     margin-bottom: 10px;
-    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+         -o-transition-duration: 1s;
+            transition-duration: 1s;
     max-width: 500px;;
     height: auto;
  }
 
  .image-container:hover {
     width: 85%;
-    box-shadow: 0 18px 36px rgba(0,0,0,0.30), 0 14px 11px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 0 18px 36px rgba(0,0,0,0.30), 0 14px 11px rgba(0,0,0,0.22);
+            box-shadow: 0 18px 36px rgba(0,0,0,0.30), 0 14px 11px rgba(0,0,0,0.22);
  }
  
  img {
@@ -371,6 +422,7 @@ input[type=submit] {
 }
  .gallery2 {
     width: 100%;
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     margin: 50px 0;
@@ -385,9 +437,16 @@ input[type=submit] {
  }
  
  .child2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 5px 10px;
     color: #262626;
  }
@@ -422,8 +481,13 @@ input[type=submit] {
  
 
 .gift-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     padding-top: 20px;
 }
 
@@ -445,6 +509,8 @@ input[type=submit] {
     width: 60px;
     height: 60px;
     border-radius: 30px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#618C03), to(#262626));
+    background-image: -o-linear-gradient(#618C03, #262626);
     background-image: linear-gradient(#618C03, #262626);
     z-index: 5;
 }
@@ -453,14 +519,22 @@ input[type=submit] {
     z-index: 10;
     top:50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 /* footer */
 .footer-logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .logo-f {
     max-width: 110px;
@@ -473,15 +547,27 @@ input[type=submit] {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 
   .footer-ul>ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 1024px;
     width: 100%;
     height: auto;
@@ -497,9 +583,15 @@ input[type=submit] {
   }
 
   .copyright {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 550px;
   }
  .copyright p {
